--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
   </head>
   <body>
     <header class="header">
-      Some text..
+      <div class="logo-box">
+        <img src="img/logo-white.png" alt="logo" class="logo" />
+      </div>
+
+      <div class="text-box">
+        <h1 class="heading-primary">
+          <span class="heading-primary-main">OUTDOORS</span>
+          <span class="heading-primary-sub">IS WHERE LIFE HAPPENS</span>
+        </h1>
+      </div>
     </header>
   </body>
 </html>
